使用 Colaboratory 创建

--- a/DPwithPy_chpt2.ipynb
+++ b/DPwithPy_chpt2.ipynb
@@ -557,13 +557,25 @@
       "metadata": {
         "id": "o3i5vAQYknRp",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9cbaf5db-9c06-401a-ab50-649c441bb12b"
       },
       "source": [
-        ""
+        "ls"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
